--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["*"]     
   pull_request:
-    branches: ["*"]     
+    branches: ["*"]      
 
 jobs:
   test:
@@ -42,7 +42,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
+          python -m spacy download en_core_web_sm
 
       - name: Verify database connection
         run: |
@@ -59,7 +59,7 @@ jobs:
           python - <<'PY'
           from src.db.postgres import create_schema
           create_schema()
-          print(" Schema created successfully")
+          print("✅ Schema created successfully")
           PY
 
       - name: Run tests
