--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - name: Create data directories
+        run: |
+          mkdir -p data/raw data/cleaned data/output models   
 
       - name: Install dependencies
         run: |
